--- a/influx.yaml
+++ b/influx.yaml
@@ -23,7 +23,7 @@ spec:
                 app: influxdb
         spec:
             containers:
-              - image: influxdb:2.0.6
+              - image: influxdb:2.3.0
                 name: influxdb
                 ports:
                   - containerPort: 8086
@@ -31,6 +31,9 @@ spec:
                 volumeMounts:
                   - mountPath: /var/lib/influxdb2
                     name: data
+                env: 
+                 - name: INFLUXD_ASSETS_PATH
+                   value: /influxdb
     volumeClaimTemplates:
       - metadata:
             name: data
@@ -46,12 +49,12 @@ apiVersion: v1
 kind: Service
 metadata:
     name: influxdb
-    namespace: default
+    namespace: influxdb
 spec:
     ports:
-     - port: 8086
-       protocol: TCP
-       targetPort: 8086
+      - name: influxdb
+        port: 8086
+        targetPort: 8086
     selector:
         app: influxdb
     type: ClusterIP
@@ -59,10 +62,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-    name: influxdb-0
-    namespace: influxdb
+    name: influxdb
+    namespace: default
 spec:
     type: ExternalName
-    externalName: influxdb.default.svc.cluster.local
+    externalName: influxdb.influxdb.svc.cluster.local
     ports:
      - port: 8086
