--- a/ingress.yaml
+++ b/ingress.yaml
@@ -23,3 +23,10 @@ spec:
            name: influxdb
            port:
             number: 8086
+     - path: /
+       pathType: Prefix
+       backend:
+         service:
+           name: my-release-grafana
+           port:
+            number: 80
