--- a/ingress-influxdb.yaml
+++ b/ingress-influxdb.yaml
@@ -1,18 +1,16 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: simpleingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+  name: ingress-influxdb
 spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
-     - path: /myservice(/|$)(.*)
+     - path: /
        pathType: Prefix
        backend:
          service:
-           name: simpleservice
+           name: influxdb
            port:
-            number: 9876
+            number: 8086
