--- a/simple.yaml
+++ b/simple.yaml
@@ -11,6 +11,13 @@ spec:
     metadata:
       labels:
         app: simpledeploy
+      annotations:
+       telegraf.influxdata.com/class: app
+       telegraf.influxdata.com/port: "8080"
+       telegraf.influxdata.com/path: /metrics
+       telegraf.influxdata.com/interval: 5s
+       telegraf.influxdata.com/scheme: http
+       telegraf.influxdata.com/internal: "true"
     spec:
       containers:
       - name: simpledeploy
